[package]
name = "warlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.2"
solana-client = "1.8.2"
solana-sdk = "1.8.2"
quarry-mine = "1.10.0"
anchor-client = "0.18.0"
axum = "0.3.2"
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.12"
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.70"
tracing = "0.1.29"
tracing-subscriber = "0.3"
solana-account-decoder = "1.8.3"